# meteo-vm2

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen.sh  bufr.lua  configure.ac  default.lua  default2bufr.lua  meteo-vm2.pc.in  meteo-vm2.spec  meteo-vm2f.pc.in  run-local  setup.py  vm2.pc.in  vm2.spec
.github/workflows/: rpm-build.yml  superlinter.yml
conf/: Makefile.am  airquality.json  bufr.lua  conf-tut.cc  default.lua  dumpordered.py  json2lua.py  meteo.json  run-test  test-source.sh  test-source.sh.in  test-variables.cc  tut-main.cc
debian/: changelog  control  copyright  libmeteo-vm2-0.install  libmeteo-vm2-0.shlibs  libmeteo-vm2-dev.install  libmeteo-vm2-doc.docs  libmeteo-vm2-tools.install  libmeteo-vm2.install  libmeteo-vm2.shlibs  libvm2-dev.install  libvm2.install  libvm2.shlibs  rules
doc/: Doxygen.in  Makefile.am  meteo-vm2-fortranbinding.dox  meteo-vm2-mainpage.dox  meteo-vm2-tools.dox  meteo-vm2-vm2attributesfile.dox  meteo-vm2-vm2valuefile.dox  meteo-vm2.dox  vm2.dox
doc/examples/: bufr.lua  generate-source.lua  http-source.lua  json-source-ws.py  oracle-source.py  parser.f90  source.f90  source.lua
fedora/SPECS/: meteo-vm2.spec
fortran/: Makefile.am  meteo-vm2-fortran.cc  meteo-vm2-fortran.h  run-test.sh  test.f90
meteo-vm2/: Makefile.am  parser-tut.cc  parser.cc  parser.h  source-tut.cc  source.cc  source.h  tut-main.cc  value.cc  value.h
meteo-vm2/utils/: string.cc  string.h  sys.cc  sys.h  term.cc  term.h  testrunner.cc  testrunner.h  tests-main.cc  tests.cc  tests.h
meteovm2/: __init__.py  cli.py  parser.py  table.py  utils.py
meteovm2/cli/: bufr_to_meteovm2.py  meteovm2_table_dump.py  meteovm2_to_bufr.py
python/: Makefile.am  meteovm2.cc
src/: Makefile.am  bufr-to-meteo-vm2.cc  meteo-vm2-manual-validation.cc  meteo-vm2-to-bufr.cc  meteo-vm2-update-source  tests.sh  utils.cc  utils.h
test/data/: source-1.lua  source-2.luac
tests/: 1-158.bufr  stations.json  table.json  test_parser.py  test_table.py  test_utils.py
vm2/: Makefile.am  parser-tut.cc  parser.cc  parser.h  source-tut.cc  source.cc  source.h  value.h
