# dist_pkgpython_PYTHON = __init__.py
# 
# pyexec_LTLIBRARIES = _meteovm2.la
# 
# 
# _meteovm2_la_SOURCES = meteovm2.cc
# _meteovm2_la_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir) $(LUA_CFLAGS) \
# 						-DMETEO_VM2_DEFAULT_SOURCE='"$(sharedstatedir)/$(PACKAGE)/source/default.luac"' \
# 						$(PYTHON_CFLAGS)
# _meteovm2_la_LDFLAGS = _myext_la_LDFLAGS = -module -avoid-version -export-symbols-regex initmeteovm2
# _meteovm2_la_LIBADD = $(LUA_LIBS) $(top_builddir)/meteo-vm2/libmeteo-vm2.la
